# practical-python-master

./: .prettierrc  .replit  README.md  patent.csv  patent.py  pyproject.toml
Work/: bounce.py  ch1.1-where-is-my-bus.py  ch1.2-sears.py  ch3.2-report.py  feihua.py  fileparse.py  mortgage.py  pcost.py  report.py  report1.py  report11.py  test_stock.py  timethis.py
Work/Data/: stocklog.csv
Work/porty-app/: print-report.py  setup.py
Work/porty-app/porty/: follow.py  newfileparse.py  newpcost.py  newreport.py  portfolio.py  stock.py  tableformat.py  ticker.py  typedproperty.py
prc-replit/: main.py  mydata.txt
pydata/: yuchuli.py
pyspider/: bingphoto.py  bingphoto2.py  easenetmusic-mac.py  easenetmusic.py  example_captcha.py  example_login.py  fake_useragent.json  guoke_login.py  le.py  lofstock.py  pdfmerge.py  word2pdf.py  zhihu_cookie.py  zhihu_sele.py
test/: 06-test.py  ball.py  buychicken.py  class-1.py  clock.py  craps.py  day.py  dict.py  distance.py  downloadfile.py  downloadfile_1.py  downloadfile_2.py  downloadfile_3.py  fibonacci.py  int_rev.py  jing.py  joseph.py  max2.py  maxmin.py  narcissus.py  paoma.py  perfectnum.py  pokegame.py  prime-1.py  prime.py  prime_save.py  salary.py  set.py  stringtest.py  suffix.py  triangle.py  ultraman.py  variable.py  verify.py  wzry.py  yanghui.py  zhuanzhang.py  zhuanzhang_1.py
test/listing20/: handlers.py  markup.py  rules.py  simple_markup.py  util.py
test/listing21/: hello_report.py  sunspots.py  sunspots_proto.py
