[tool.poetry]
name = "repl_python3_practical-python-master"
version = "0.1.0"
description = ""
authors = ["yomizzz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"
lxml = "^4.7.1"
pandas = "^1.3.5"
PyPDF2 = "^1.26.0"
PySimpleGUI = "^4.55.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
